--- a/aspnetapp/aspnetapp/Pages/Shared/_Layout.cshtml
+++ b/aspnetapp/aspnetapp/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - aspnetapp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; @DateTime.Now.Year - aspnetapp - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
